@@ -812,10 +812,24 @@ CONTROL;
 		}
 
 		$n = $this->mTitle->countRevisionsBetween( $oldid, $newid );
-		if ( !$n )
+		if ( !$n ) {
 			return '';
-
-		return wfMsgExt( 'diff-multi', array( 'parseinline' ), $n );
+		} else {
+			global $wgLang;
+			$dbr = wfGetDB( DB_SLAVE );
+			$res = $dbr->select( 'revision', 'DISTINCT rev_user_text',
+				array(
+					'rev_page = ' . $this->mOldRev->getPage(),
+					'rev_id > ' . $this->mOldRev->getId(),
+					'rev_id < ' . $this->mNewRev->getId()
+				), __METHOD__,
+				array( 'LIMIT' => 101 )
+			);
+			$numUsers = $dbr->numRows( $res );
+			$msg = $numUsers > 100 ? 'diff-multi-manyusers' : 'diff-multi';
+			return wfMsgExt( $msg, array( 'parseinline' ), $wgLang->formatnum( $n ),
+				$wgLang->formatnum( $numUsers ) );
+		}
 	}
 
 
